--- a/tag.hbs
+++ b/tag.hbs
@@ -4,8 +4,8 @@
 {{! If we have a tag cover, display that - else blog cover - else nothing }}
 <header class="main-header tag-head {{#if tag.image}}" style="background-image: url({{tag.image}}){{else}}{{#if @blog.cover}}" style="background-image: url({{@blog.cover}}){{else}}no-cover{{/if}}{{/if}}">
     <nav class="main-nav overlay clearfix">
-        <a class="back-button icon-arrow-left" href="{{@blog.url}}"> Home</a>
-        <a class="subscribe-button icon-feed" href="{{@blog.url}}/rss/"> Subscribe</a>
+        <a class="back-button icon-arrow-left" href="{{@blog.url}}">首页</a>
+        <a class="subscribe-button icon-feed" href="{{@blog.url}}/rss/">订阅</a>
     </nav>
     <div class="vertical">
         <div class="main-header-content inner">
