--- a/author.hbs
+++ b/author.hbs
@@ -7,15 +7,15 @@
 {{#author}}
     <header class="main-header author-head {{#if cover}}" style="background-image: url({{cover}}){{else}}no-cover{{/if}}">
         <nav class="main-nav overlay clearfix">
-            <a class="back-button icon-arrow-left" href="{{@blog.url}}"> Home</a>
-            <a class="subscribe-button icon-feed" href="{{@blog.url}}/rss/"> Subscribe</a>
+            <a class="back-button icon-arrow-left" href="{{@blog.url}}">首页</a>
+            <a class="subscribe-button icon-feed" href="{{@blog.url}}/rss/">订阅</a>
         </nav>
     </header>
 
     <section class="author-profile inner">
         {{#if image}}
         <figure class="author-image">
-            <div class="img" style="background-image: url({{image}})"><span class="hidden">{{name}}'s Picture</span></div>
+            <div class="img" style="background-image: url({{image}})"><span class="hidden">{{name}}的头像</span></div>
         </figure>
         {{/if}}
         <h1 class="author-title">{{name}}</h1>
