--- a/author.hbs
+++ b/author.hbs
@@ -7,7 +7,7 @@
 {{#author}}
     <header class="main-header author-head {{#if cover}}" style="background-image: url({{cover}}){{else}}no-cover{{/if}}">
         <nav class="main-nav overlay clearfix">
-            <a class="back-button icon-arrow-left" href="{{@blog.url}}">首页</a>
+            <a class="back-button icon-home" href="{{@blog.url}}">首页</a>
             <a class="subscribe-button icon-feed" href="{{@blog.url}}/rss/">订阅</a>
         </nav>
     </header>
