--- a/post.hbs
+++ b/post.hbs
@@ -8,7 +8,7 @@
 
 <header class="main-header post-head {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}">
     <nav class="main-nav {{#if image}}overlay{{/if}} clearfix">
-        <a class="back-button icon-arrow-left" href="{{@blog.url}}">首页</a>
+        <a class="back-button icon-home" href="{{@blog.url}}">首页</a>
         <a class="subscribe-button icon-feed" href="{{@blog.url}}/rss/">订阅</a>
     </nav>
 </header>
