--- a/page.hbs
+++ b/page.hbs
@@ -8,8 +8,8 @@
 
 <header class="main-header post-head {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}">
     <nav class="main-nav {{#if image}}overlay{{/if}} clearfix">
-        <a class="back-button icon-home" href="{{@blog.url}}">首页</a>
-        <a class="subscribe-button icon-feed" href="{{@blog.url}}/rss/">订阅</a>
+        <a class="back-button" href="{{@blog.url}}"><i class="fa fa-home"></i> 首页</a>
+        <a class="subscribe-button" href="{{@blog.url}}/rss/"><i class="fa fa-rss"></i> 订阅</a>
     </nav>
 </header>
 
