--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -19,7 +19,7 @@
 .back-button {
     float: left;
     height: 38px;
-    padding: 0 15px 0 10px;
+    padding: 0 20px;
     border: transparent 1px solid;
     color: #9EABB3;
     text-align: center;
