--- a/author.hbs
+++ b/author.hbs
@@ -7,8 +7,8 @@
 {{#author}}
     <header class="main-header author-head {{#if cover}}" style="background-image: url({{cover}}){{else}}no-cover{{/if}}">
         <nav class="main-nav overlay clearfix">
-            <a class="back-button icon-home" href="{{@blog.url}}">首页</a>
-            <a class="subscribe-button icon-feed" href="{{@blog.url}}/rss/">订阅</a>
+            <a class="back-button" href="{{@blog.url}}"><i class="fa fa-home"></i> 首页</a>
+            <a class="subscribe-button" href="{{@blog.url}}/rss/"><i class="fa fa-rss"></i> 订阅</a>
         </nav>
     </header>
 
