date format test again

--- a/post.hbs
+++ b/post.hbs
@@ -19,7 +19,7 @@
         <header class="post-header">
             <h1 class="post-title">{{title}}</h1>
             <section class="post-meta">
-                <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="YYYY"}}</time> {{tags prefix=" · "}}
+                <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="YYYY"}} 年 {{date format="MM"}} 月 {{date format="D"}} 日</time> {{tags prefix=" · "}}
             </section>
             <section class="social-share">
                 {{> "social_share"}}
