--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -15,7 +15,7 @@
     <footer class="post-meta">
         {{#if author.image}}<img class="author-thumb" src="{{author.image}}" alt="{{author.name}}" nopin="nopin" />{{/if}}
         {{author}}
-        {{tags prefix=" · "}}
+        {{tags prefix=" · " separator=" / "}}
         <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="YYYY"}} 年 {{date format="MM"}} 月 {{date format="D"}} 日</time> 
     </footer>
 </article>
