--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -1,6 +1,6 @@
 <nav class="pagination" role="navigation">
     {{#if prev}}
-        <a class="newer-posts" href="{{page_url prev}}">&larr 上一页</a>
+        <a class="newer-posts" href="{{page_url prev}}">&larr; 上一页</a>
     {{/if}}
     <span class="page-number">{{page}} / {{pages}}</span>
     {{#if next}}
