删除 Social Share

--- a/post.hbs
+++ b/post.hbs
@@ -21,9 +21,9 @@
             <section class="post-meta">
                 {{author}}  {{tags prefix=" · " separator=" / "}} <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="YYYY"}} 年 {{date format="MM"}} 月 {{date format="D"}} 日</time>
             </section>
-            <section class="social-share">
+<!--            <section class="social-share">
                 {{> "social_share"}}
-            </section>
+            </section> -->
         </header>
 
         <section class="post-content">
