删掉另一个位置的 Social Share

--- a/post.hbs
+++ b/post.hbs
@@ -30,8 +30,9 @@
             {{content}}
         </section>
 
-        <section class="social-share">
-            {{> "social_share"}}
+<!--            <section class="social-share">
+                {{> "social_share"}}
+            </section> -->
         </section>
 
         <footer class="post-footer">
