--- a/post.hbs
+++ b/post.hbs
@@ -21,18 +21,11 @@
             <section class="post-meta">
                 {{author}}  {{tags prefix=" · " separator=" / "}} <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="YYYY"}} 年 {{date format="MM"}} 月 {{date format="D"}} 日</time>
             </section>
-<!--            <section class="social-share">
-                {{> "social_share"}}
-            </section> -->
+<!--section class="social-share">{{> "social_share"}}</section-->
         </header>
 
         <section class="post-content">
             {{content}}
-        </section>
-
-<!--            <section class="social-share">
-                {{> "social_share"}}
-            </section> -->
         </section>
 
         <footer class="post-footer">
