--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -246,10 +246,15 @@ h6 {
 a {
     color: #4A4A4A;
     transition: color 0.3s ease;
+	text-decoration: none;
+	border-bottom-style: solid;
+	border-bottom-width: 1px;
+	padding-bottom: 2px;
 }
 
 a:hover {
     color: #111;
+	text-decoration: none;
 }
 
 p, ul, ol, dl {
@@ -310,7 +315,6 @@ blockquote {
     margin: 1.75em 0 1.75em -2.2em;
     padding: 0 0 0 1.75em;
     border-left: #4A4A4A 0.4em solid;
-	color: #CCC;
 }
 
 blockquote p {
