--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -217,30 +217,30 @@ h4, h5, h6 {
 }
 
 h1 {
-    font-size: 5rem;
+    font-size: 2rem;
     letter-spacing: -2px;
     text-indent: -3px;
 }
 
 h2 {
-    font-size: 3.6rem;
+    font-size: 1.6rem;
     letter-spacing: -1px;
 }
 
 h3 {
-    font-size: 3rem;
+    font-size: 1.4rem;
 }
 
 h4 {
-    font-size: 2.5rem;
+    font-size: 1.2rem;
 }
 
 h5 {
-    font-size: 2rem;
+    font-size: 1rem;
 }
 
 h6 {
-    font-size: 2rem;
+    font-size: 0.8rem;
 }
 
 a {
@@ -1097,6 +1097,18 @@ body:not(.post-template) .post-title {
     -webkit-transform: translateX(-50%); /* for Safari and iOS */
     -ms-transform: translateX(-50%); /* for IE9 */
     transform: translateX(-50%);
+}
+
+.post-content a{
+	text-decoration: none;
+	border-bottom-style: solid;
+	border-bottom-width: 1px;
+	padding-bottom: 2px;
+}
+
+.post-content a:hover,
+.post-content a:focus {
+	text-decoration: none;
 }
 
 .footnotes {
