--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -983,7 +983,10 @@ body:not(.post-template) .post-title {
 }
 
 .post-meta a:hover {
-    text-decoration: underline;
+	text-decoration: none;
+	border-bottom-style: solid;
+	border-bottom-width: 1px;
+	padding-bottom: 2px;
 }
 
 .user-meta {
@@ -1162,9 +1165,15 @@ body:not(.post-template) .post-title {
 
 .author-meta a {
     color: #9EABB3;
+	text-decoration: none;
+	border-bottom-style: solid;
+	border-bottom-width: 1px;
+	padding-bottom: 2px;
 }
-.author-meta a:hover {
+.author-meta a:hover,
+.author-meta a:focus {
     color: #111;
+	text-decoration: none;
 }
 
 /* Create some space to the right for the share links */
