重新设计字体大小

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -217,26 +217,26 @@ h4, h5, h6 {
 }
 
 h1 {
-    font-size: 2rem;
+    font-size: 3.6rem;
     letter-spacing: -2px;
     text-indent: -3px;
 }
 
 h2 {
-    font-size: 1.6rem;
+    font-size: 2.4rem;
     letter-spacing: -1px;
 }
 
 h3 {
-    font-size: 1.4rem;
+    font-size: 1.8rem;
 }
 
 h4 {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
 }
 
 h5 {
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
 
 h6 {
@@ -1112,6 +1112,7 @@ body:not(.post-template) .post-title {
 .post-content a:hover,
 .post-content a:focus {
 	text-decoration: none;
+	border-bottom: none;
 }
 
 .footnotes {
@@ -1683,28 +1684,28 @@ body:not(.post-template) .post-title {
     }
 
     h1 {
-        font-size: 4.5rem;
+        font-size: 3.6rem;
         text-indent: -2px;
     }
 
     h2 {
-        font-size: 3.6rem;
+        font-size: 2.4rem;
     }
 
     h3 {
-        font-size: 3.1rem;
+        font-size: 1.8rem;
     }
 
     h4 {
-        font-size: 2.5rem;
+        font-size: 1.4rem;
     }
 
     h5 {
-        font-size: 2.2rem;
+        font-size: 1.2rem;
     }
 
     h6 {
-        font-size: 1.8rem;
+        font-size: 0.8rem;
     }
 
     .author-profile {
@@ -1904,28 +1905,28 @@ body:not(.post-template) .post-title {
     }
 
     h2 {
-        font-size: 2.4rem;
+        font-size: 2.0rem;
         letter-spacing: 0;
     }
 
     h3 {
-        font-size: 2.1rem;
+        font-size: 1.6rem;
     }
 
     h4 {
-        font-size: 1.9rem;
+        font-size: 1.2rem;
     }
 
     h5 {
-        font-size: 1.8rem;
+        font-size: 1rem;
     }
 
     h6 {
-        font-size: 1.8rem;
+        font-size: 0.8rem;
     }
 
     body:not(.post-template) .post-title {
-        font-size: 2.5rem;
+        font-size: 2.8rem;
     }
 
     .post-template .site-footer {
