--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -193,7 +193,7 @@ body {
     -webkit-font-feature-settings: 'kern' 1;
     -moz-font-feature-settings: 'kern' 1;
     -o-font-feature-settings: 'kern' 1;
-    text-rendering: geometricPrecision;
+    text-rendering: optimizeLegibility;
 }
 
 ::-moz-selection {
@@ -213,34 +213,34 @@ h4, h5, h6 {
     line-height: 1.15em;
     margin: 0 0 0.4em 0;
     font-family: 'Avenir Next', 'Helvetica Neue', Arial, 'Lantinghei SC', 'Pingfang SC', 'Microsoft YaHei', 微软雅黑, Avenir, Helvetica, STHeiti, 'Hiragino Sans GB', 'WenQuanYi Micro Hei', SimSun, 'Nimbus Sans L', sans-serif;
-    text-rendering: geometricPrecision;
+    text-rendering: optimizeLegibility;
 }
 
 h1 {
-    font-size: 3.6rem;
+    font-size: 4.8rem;
     letter-spacing: -2px;
     text-indent: -3px;
 }
 
 h2 {
-    font-size: 2.4rem;
+    font-size: 3.6rem;
     letter-spacing: -1px;
 }
 
 h3 {
-    font-size: 1.8rem;
+    font-size: 2.4rem;
 }
 
 h4 {
-    font-size: 1.4rem;
+    font-size: 1.8rem;
 }
 
 h5 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
 }
 
 h6 {
-    font-size: 0.8rem;
+    font-size: 1.2rem;
 }
 
 a {
@@ -943,7 +943,7 @@ body.nav-opened .nav {
 }
 
 body:not(.post-template) .post-title {
-    font-size: 2.4rem;
+    font-size: 3.6rem;
 }
 
 .post-title a {
