--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1053,7 +1053,7 @@ body:not(.post-template) .post-title {
 }
 
 .post-template .post-title {
-    margin-bottom: 0;
+    margin-bottom: 0.2em;
 }
 
 .post-template .post-meta {
