--- a/tag.hbs
+++ b/tag.hbs
@@ -14,7 +14,7 @@
                 {{#if tag.description}}
                     {{tag.description}}
                 {{else}}
-                    A {{pagination.total}}-post collection
+                    此类文章共有 {{pagination.total}} 篇
                 {{/if}}
             </h2>
         </div>
