--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1776,9 +1776,11 @@ body:not(.post-template) .post-title {
         border-top: rgba(0,0,100,0.06) 1px solid;
         border-left: none;
     }
+	.copyright {
+		text-align:left;
+	}
 
 }
-
 
 /* ==========================================================================
    12. Media Queries - Smaller than 500px
@@ -2039,6 +2041,9 @@ body:not(.post-template) .post-title {
     .read-next .post {
         width: 100%;
     }
+	.copyright {
+		text-align:left;
+	}
 
 }
 
