--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -260,7 +260,7 @@ p, ul, ol, dl {
     -webkit-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
     -moz-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
     -o-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
-    margin: 0 0 1em 0;
+    margin: 0 0 1.4em 0;
     text-rendering: geometricPrecision;
 }
 
@@ -311,9 +311,9 @@ hr {
 blockquote {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    margin: 1.75em 0 1.75em -2.2em;
-    padding: 0 0 0 1.75em;
-    border-left: #4A4A4A 0.4em solid;
+    margin: 1.75em 0 1.75em -1.8em;
+    padding: 0 0 0 1.5em;
+    border-left: #AAA 0.3em solid;
 }
 
 blockquote p {
