--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -185,7 +185,7 @@ html {
 body {
     height: 100%;
     max-height: 100%;
-    font-family: "Merriweather", serif;
+    font-family: 'Avenir Next', 'Helvetica Neue', Arial, 'Lantinghei SC', 'Pingfang SC', 'Microsoft YaHei', 微软雅黑, Avenir, Helvetica, STHeiti, 'Hiragino Sans GB', 'WenQuanYi Micro Hei', SimSun, 'Nimbus Sans L', sans-serif;
     letter-spacing: 0.01rem;
     font-size: 1.8rem;
     line-height: 1.75em;
@@ -883,7 +883,7 @@ body.nav-opened .nav {
     font-size: 2rem;
     line-height: 1.5em;
     font-weight: 400;
-    font-family: "Merriweather", serif;
+    font-family: 'Avenir Next', 'Helvetica Neue', Arial, 'Lantinghei SC', 'Pingfang SC', 'Microsoft YaHei', 微软雅黑, Avenir, Helvetica, STHeiti, 'Hiragino Sans GB', 'WenQuanYi Micro Hei', SimSun, 'Nimbus Sans L', sans-serif;
     letter-spacing: 0.01rem;
     color: rgba(255,255,255,0.8);
 }
@@ -1346,7 +1346,7 @@ body:not(.post-template) .post-title {
 /* Location, website, and link */
 .author-profile .author-meta {
     margin: 2rem 0;
-    font-family: "Merriweather", serif;
+    font-family: 'Avenir Next', 'Helvetica Neue', Arial, 'Lantinghei SC', 'Pingfang SC', 'Microsoft YaHei', 微软雅黑, Avenir, Helvetica, STHeiti, 'Hiragino Sans GB', 'WenQuanYi Micro Hei', SimSun, 'Nimbus Sans L', sans-serif;
     letter-spacing: 0.01rem;
     font-size: 1.7rem;
 }
