--- a/default.hbs
+++ b/default.hbs
@@ -103,23 +103,24 @@
     </script>
 
     {{! Activate Social Links }}
-    <script>
-        if(window.social_link){
-            var url_regexp = /^(https?:\/\/)?([\da-z\.-]+)\.([a-z\.]{2,6})([\/\w \.-]*)*\/?$/
-            $.each(window.social_link,function(type, url){
-                if(typeof url ==="string" && url_regexp.test(url)){
-                    $('<li>').append($('<a>',{
-                                        html: '<i class="fa fa-'+type+'"></i>',
-                                        title: type,
-                                        href: url,
-                                        target: "_blank"
-                                    })
-                                ).appendTo('.social_link');
+<script>
+    if(window.social_link){
+        var url_regexp = /^(https?:\/\/)?([\da-z\.-]+)\.([a-z\.]{2,6})([\/\w \.-]*)*\/?$/
+        var mail_regexp = /^mailto:/ // 1
+        $.each(window.social_link,function(type, url){
+            if(typeof url ==="string" && (url_regexp.test(url) || mail_regexp.test(url))){ // 2
+                $('<li>').append($('<a>',{
+                                    html: '<i class="fa fa-'+type+'"></i>',
+                                    title: type,
+                                    href: url,
+                                    target: "_blank"
+                                })
+                            ).appendTo('.social_link');
 
-                }
-            })
-        }
-    </script>
+            }
+        })
+    }
+</script>
 
 </body>
 </html>
