--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -956,6 +956,7 @@ body:not(.post-template) .post-title {
     margin: 1em 0 0 0;
     font-size: 0.9em;
     line-height: 1.7em;
+	text-align: justify;
 }
 
 .read-more {
