修正导航按钮宽度。

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1550,6 +1550,7 @@ body:not(.post-template) .post-title {
     text-decoration: none;
     border-radius: 4px;
     transition: border 0.3s ease;
+	width: 5em;
 }
 
 .older-posts {
