--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1434,7 +1434,7 @@ body:not(.post-template) .post-title {
 }
 
 .read-next-story .post:before {
-    content: "Read This Next";
+    content: "阅读下一篇";
     padding: 4px 10px 5px;
     text-transform: uppercase;
     font-size: 1.1rem;
@@ -1445,7 +1445,7 @@ body:not(.post-template) .post-title {
     transition: all 0.5s ease;
 }
 .read-next-story.prev .post:before {
-    content: "You Might Enjoy";
+    content: "阅读上一篇";
 }
 
 .read-next-story h2 {
